unpackaged/main/default/objects/Lead/fields/Additional_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Additional_Certifications__c</fullName>
    <label>Additional Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Additional_Certifications</valueSetName>
    </valueSet>
</CustomField>