unpackaged/main/default/objects/Lead/fields/Affiliated_with_an_LCP__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_with_an_LCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliated with an LCP</label>
    <type>Checkbox</type>
</CustomField>