unpackaged/main/default/objects/Lead/fields/Amount_of_assistance__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_assistance__c</fullName>
    <label>Amount of assistance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>