unpackaged/main/default/objects/Lead/fields/AOB_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>AOB_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acknowledgement of Benefits has been captured.</description>
    <label>AOB Acknowledged</label>
    <type>Checkbox</type>
</CustomField>