unpackaged/main/default/objects/Lead/fields/AOB_Acknowledged_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>AOB_Acknowledged_Date_Time__c</fullName>
    <description>When AOB was acknowledged by patient.</description>
    <label>AOB Acknowledged Date/Time</label>
    <type>DateTime</type>
</CustomField>