unpackaged/main/default/objects/Lead/fields/Background_Check_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Last_Update__c</fullName>
    <label>Background Check Last Update</label>
    <type>Date</type>
</CustomField>