unpackaged/main/default/objects/Lead/fields/Background_Completed__c.field-meta.xml
<CustomField>
    <fullName>Background_Completed__c</fullName>
    <label>Background Completed</label>
    <type>DateTime</type>
</CustomField>