unpackaged/main/default/objects/Lead/fields/Background_Sent__c.field-meta.xml
<CustomField>
    <fullName>Background_Sent__c</fullName>
    <label>Background Sent</label>
    <type>DateTime</type>
</CustomField>