unpackaged/main/default/objects/Lead/fields/Background_Status__c.field-meta.xml
<CustomField>
    <fullName>Background_Status__c</fullName>
    <label>Background Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Background_Status</valueSetName>
    </valueSet>
</CustomField>