unpackaged/main/default/objects/Lead/fields/Credential_Certification_License__c.field-meta.xml
<CustomField>
    <fullName>Credential_Certification_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credential/Certification/License</label>
    <type>Checkbox</type>
</CustomField>