unpackaged/main/default/objects/Lead/fields/Denial_Email_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Denial_Email_Datetime__c</fullName>
    <description>Is used as a base to delay email send out.</description>
    <label>Denial Email Datetime</label>
    <type>DateTime</type>
</CustomField>