unpackaged/main/default/objects/Lead/fields/Funding_category__c.field-meta.xml
<CustomField>
    <fullName>Funding_category__c</fullName>
    <label>Funding category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funding_category</valueSetName>
    </valueSet>
</CustomField>