unpackaged/main/default/objects/Lead/fields/Goals_objectives_in_lactation_prof__c.field-meta.xml
<CustomField>
    <fullName>Goals_objectives_in_lactation_prof__c</fullName>
    <label>Goals/objectives in lactation prof</label>
    <length>2800</length>
    <type>LongTextArea</type>
</CustomField>