unpackaged/main/default/objects/Lead/fields/Grant_App_Signed__c.field-meta.xml
<CustomField>
    <fullName>Grant_App_Signed__c</fullName>
    <label>Grant App Signed</label>
    <type>Date</type>
</CustomField>