unpackaged/main/default/objects/Lead/fields/Grant_App_Signed_by__c.field-meta.xml
<CustomField>
    <fullName>Grant_App_Signed_by__c</fullName>
    <label>Grant App Signed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>