unpackaged/main/default/objects/Lead/fields/Has_Insurance_Card__c.field-meta.xml
<CustomField>
    <fullName>Has_Insurance_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Insurance Card</label>
    <type>Checkbox</type>
</CustomField>