unpackaged/main/default/objects/Lead/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <label>Home Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>