unpackaged/main/default/objects/Lead/fields/IBCLC_Targeted_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>IBCLC_Targeted_Certification_Date__c</fullName>
    <label>IBCLC Targeted Certification Date</label>
    <type>Date</type>
</CustomField>