unpackaged/main/default/objects/Lead/fields/IBCLE_certification_pathway__c.field-meta.xml
<CustomField>
    <fullName>IBCLE_certification_pathway__c</fullName>
    <label>IBCLE certification pathway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IBCLE_certification_pathway</valueSetName>
    </valueSet>
</CustomField>