unpackaged/main/default/objects/Lead/fields/Identify_as_transgender__c.field-meta.xml
<CustomField>
    <fullName>Identify_as_transgender__c</fullName>
    <label>Identify as transgender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>