unpackaged/main/default/objects/Lead/fields/Initial_Background_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Background_Check_Status__c</fullName>
    <label>Initial Background Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Expired Invitation</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>