unpackaged/main/default/objects/Lead/fields/Insurance_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Name__c</fullName>
    <label>Insurance Provider Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>