unpackaged/main/default/objects/Lead/fields/Lactation_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Lactation_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lactation Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>LactationConsultantLeads</relationshipName>
    <type>Lookup</type>
</CustomField>