unpackaged/main/default/objects/Lead/fields/Lactation_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Lactation_Group_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lactation Group Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Lactation Group Name)</relationshipLabel>
    <relationshipName>LactationGroupNameLeads</relationshipName>
    <type>Lookup</type>
</CustomField>