unpackaged/main/default/objects/Lead/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <description>Is used to be mapped to Contact record as we need to populate restricted picklist fields in flow from source Lead.</description>
    <formula>Id</formula>
    <label>Lead Id</label>
    <type>Text</type>
</CustomField>