unpackaged/main/default/objects/Lead/fields/Lead_Specific__c.field-meta.xml
<CustomField>
    <fullName>Lead_Specific__c</fullName>
    <description>Additional, specific, information about the source of this Lead</description>
    <inlineHelpText>Additional, specific, information about the source of this Lead</inlineHelpText>
    <label>Lead Specific</label>
    <type>TextArea</type>
</CustomField>