unpackaged/main/default/objects/Lead/fields/Mthly_BG_Check__c.field-meta.xml
<CustomField>
    <fullName>Mthly_BG_Check__c</fullName>
    <description>Is used to capture the result of a monthly background check for LCs.</description>
    <label>Mthly BG Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MonthlyBackgroundCheck</valueSetName>
    </valueSet>
</CustomField>