unpackaged/main/default/objects/Lead/fields/Mthly_BG_Date__c.field-meta.xml
<CustomField>
    <fullName>Mthly_BG_Date__c</fullName>
    <description>Date of the monthly BG Check.</description>
    <label>Mthly BG Date</label>
    <type>Date</type>
</CustomField>