unpackaged/main/default/objects/Lead/fields/Opt_in_to_TLN_marketing_communications__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_to_TLN_marketing_communications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt in to TLN marketing communications</label>
    <type>Checkbox</type>
</CustomField>