unpackaged/main/default/objects/Lead/fields/Orientation_Call_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Call_Datetime__c</fullName>
    <label>Orientation Call Datetime</label>
    <type>DateTime</type>
</CustomField>