unpackaged/main/default/objects/Lead/fields/Orientation_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Call_Status__c</fullName>
    <label>Orientation Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>