unpackaged/main/default/objects/Lead/fields/Outside_LC_Referral__c.field-meta.xml
<CustomField>
    <fullName>Outside_LC_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outside LC Referral</label>
    <type>Checkbox</type>
</CustomField>