unpackaged/main/default/objects/Lead/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the parent account for this lead</description>
    <inlineHelpText>What is the Parent Account related to this lead</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Parent Account)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>