unpackaged/main/default/objects/Lead/fields/Payer_Carve_Outs__c.field-meta.xml
<CustomField>
    <fullName>Payer_Carve_Outs__c</fullName>
    <label>Payer Carve Outs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield</fullName>
            </value>
            <value>
                <fullName>United Healthcare</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Kaiser</fullName>
            </value>
            <value>
                <fullName>Tricare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>