unpackaged/main/default/objects/Lead/fields/Practice_Structure__c.field-meta.xml
<CustomField>
    <fullName>Practice_Structure__c</fullName>
    <label>Practice Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>An LLC</fullName>
            </value>
            <value>
                <fullName>An S-Corp</fullName>
            </value>
            <value>
                <fullName>An Inc.</fullName>
            </value>
            <value>
                <fullName>A Co.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>