unpackaged/main/default/objects/Lead/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary Contact, when in doubt start with this person</description>
    <inlineHelpText>Primary Contact, when in doubt start with this person</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>