unpackaged/main/default/objects/Lead/fields/Primary_Insurance_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Eligibility__c</fullName>
    <label>Primary Insurance Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Eligibility</valueSetName>
    </valueSet>
</CustomField>