unpackaged/main/default/objects/Lead/fields/Primary_Insurance_Employer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Employer__c</fullName>
    <label>Primary Insurance Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>