unpackaged/main/default/objects/Lead/fields/Re_Certifying_IBCLC__c.field-meta.xml
<CustomField>
    <fullName>Re_Certifying_IBCLC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Certifying IBCLC</label>
    <type>Checkbox</type>
</CustomField>