unpackaged/main/default/objects/Lead/fields/Reason_For_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Inactive__c</fullName>
    <label>Reason For Inactive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of network prefix</fullName>
            </value>
            <value>
                <fullName>Plan Type not accepted (HMO/EPO/Medicaid/restricted multiplan/etc)</fullName>
            </value>
            <value>
                <fullName>More than 6 months since last visit</fullName>
            </value>
            <value>
                <fullName>Insurance went inactive</fullName>
            </value>
            <value>
                <fullName>Referral End Date / Visit Cap Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>