unpackaged/main/default/objects/Lead/fields/Referred_by_LC__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_LC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred by LC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Lactation Consultant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Referred by LC)</relationshipLabel>
    <relationshipName>LeadsReferredByLC</relationshipName>
    <type>Lookup</type>
</CustomField>