unpackaged/main/default/objects/Lead/fields/sms_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>sms_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sms Acknowledged</label>
    <type>Checkbox</type>
</CustomField>