unpackaged/main/default/objects/Lead/fields/Speak_multiple_languages__c.field-meta.xml
<CustomField>
    <fullName>Speak_multiple_languages__c</fullName>
    <label>Speak multiple languages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>