unpackaged/main/default/objects/Lead/fields/UUID_Calendly__c.field-meta.xml
<CustomField>
    <fullName>UUID_Calendly__c</fullName>
    <label>UUID Calendly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>