unpackaged/main/default/objects/Lead/recordTypes/Clinical_Practice.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Practice</fullName>
    <active>true</active>
    <businessProcess>Clinical Practice</businessProcess>
    <label>Clinical Practice</label>
</RecordType>