unpackaged/main/default/objects/Lead/recordTypes/Employer_Sponsor.recordType-meta.xml
<RecordType>
    <fullName>Employer_Sponsor</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Employer/Sponsor</label>
</RecordType>