unpackaged/main/default/objects/Lead/recordTypes/Grant_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Grant_Applicant</fullName>
    <active>true</active>
    <businessProcess>Grant</businessProcess>
    <label>Grant Applicant</label>
</RecordType>