unpackaged/main/default/objects/Lead/recordTypes/Patient.recordType-meta.xml
<RecordType>
    <fullName>Patient</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Patient</label>
</RecordType>