unpackaged/main/default/objects/Lead/recordTypes/Payor.recordType-meta.xml
<RecordType>
    <fullName>Payor</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Payor</label>
</RecordType>