unpackaged/main/default/objects/Lead/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Vendor</label>
</RecordType>