unpackaged/main/default/objects/Lead/validationRules/Cannot_change_owner_without_custom_perm.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_owner_without_custom_perm</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    $UserRole.Name = &quot;Commercial Sales Specialist&quot;,  
    NOT($Permission.Permission_to_change_owner)
)</errorConditionFormula>
    <errorMessage>Owner cannot be changed without proper permission</errorMessage>
</ValidationRule>