unpackaged/main/default/objects/Lead/validationRules/LeadSourceValidation_TLN_LC.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSourceValidation_TLN_LC</fullName>
    <active>true</active>
    <description>TLN LC</description>
    <errorConditionFormula>AND(TEXT(LeadSource)=&#39;TLN LC&#39;, AND( Referred_by_LC__c = NULL, Outside_LC_Referral__c != TRUE))</errorConditionFormula>
    <errorMessage>Referred by LC is required or Outside LC Referral should be checked</errorMessage>
</ValidationRule>