unpackaged/main/default/objects/Lead/validationRules/Sensitive_Situation_Not_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Sensitive_Situation_Not_Active</fullName>
    <active>true</active>
    <description>US-28008</description>
    <errorConditionFormula>AND(NOT(Sensitive_Situation__c), NOT(ISBLANK(Sensitive_Reason__c)))</errorConditionFormula>
    <errorDisplayField>Sensitive_Reason__c</errorDisplayField>
    <errorMessage>You specified sensitive reason, but sensitive situation is not active. Please, clear sensitive reasons or mark as sensitive situation.</errorMessage>
</ValidationRule>