unpackaged/main/default/objects/Lead/listViews/All_Clinical_Practices.listView-meta.xml
<ListView>
    <fullName>All_Clinical_Practices</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Clinical_Practice</value>
    </filters>
    <label>All Clinical Practices</label>
</ListView>